Add package version requirements and fixed bloating of dataframe storing image data

--- a/code.ipynb
+++ b/code.ipynb
@@ -22,24 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Images\n",
-      "Brand            \n",
-      "audi         3000\n",
-      "bmw          3000\n",
-      "chevrolet    3000\n",
-      "ford         3000\n",
-      "nissan       3000\n",
-      "toyota       3000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "root = './CarDataset'\n",
     "\n",
@@ -65,22 +50,24 @@
     "    if class_counts[brand] < 3000:\n",
     "        class_counts[brand] += 1\n",
     "\n",
-    "    fp = os.path.join(root, filename)\n",
+    "    fp = class_examples[brand]\n",
     "    image = Image.open(fp).convert('RGB') \n",
     "    images.append(transform(image))\n",
     "    labels.append(brand)\n",
     "\n",
     "data = {'Images': images, 'Brand': labels}\n",
-    "cars = pd.DataFrame(data)\n",
     "\n",
-    "# Check that subset of data is balanced\n",
-    "counts = cars.groupby('Brand').count()\n",
-    "print(counts)"
+    "\n",
+    "# cars = pd.DataFrame(data)\n",
+    "\n",
+    "# # Check that subset of data is balanced\n",
+    "# counts = cars.groupby('Brand').count()\n",
+    "# print(counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
